implement getTasks method
