# api/app/Http/Resources/TaskResource.php
@@ -1,0 +1,35 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+use Openapi\Attributes as OA;
+
+#[OA\Schema(
+    properties: [
+        'id' => new OA\Property(property: 'id', type: 'integer', example: '1'),
+        'title' => new OA\Property(property:'title', type:'string', example:'title'),
+        'description' => new OA\Property(property: 'description', type: 'string', example: 'description'),
+        'deadline' => new OA\Property(property: 'deadline', type: 'datetime', example: ''),
+        'active' => new OA\Property(property: 'active', type: 'boolean', example: 'true'),
+    ]
+)]
+class TaskResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'id' => $this->id,
+            'title' => $this->title,
+            'description' => $this->description,
+            'deadline' => $this->deadline,
+            'active' => $this->active,
+        ];
+    }
+}
